# todo-task-backend

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.py  docker-compose.yml  docker-entrypoint.sh  file_db.bak  pyproject.toml  requirements.txt  run.py  setup.py  setup_flower.sh  setup_worker.sh  setup_workers.sh  tox.ini
.deprecated/: Dockerfile
.github/workflows/: apisec-scan-analysis.yml  codeql-analysis.yml
app/: __init__.py  auth.py  config.py  errors.py  models.py  routes.py
app/adapters/: persistent_storage.py
app/errors/: __init__.py
app/rest_lib/: controller.py  repository.py  services.py
app/scripts/: clean_db.py  drop_db.py  init_db.py  recreate_db.py
app/utils/: schemas.py
crud/: index.py  locale.py  route_category.py  route_file.py  route_task.py
database/: __init__.py  engine.py  generator.py  manager.py
docs/: DOCS.md  WebTODOArchiticture.vpp
dumps/: inserts.sql
handler/: __init__.py  handler_category.py  handler_file.py  handler_task.py  locale.py
server/: __init__.py  app.py  celery.py  config.py  crud.py  data_base.py  error.py  errors_handler.py  index.py  init_app.py  init_db.py  initialize_db.py  inserts.sql  istorage.py  jwt_auth.py  local.py  locale.py  operation.py  routes.py  server_op.py  setup.py  sql_generator.py  sqlite_db.py  sqlite_utility.py  views.py
server/.user/: __init__.py  controller.py  model.py  repository.py  serializer.py  service.py
server/account/: __init__.py
server/api/: __init__.py
server/async_tasks/: email.py  s3_cloud.py
src/: __init__.py  error.py
(+282 files in other folders)
