[tool.poetry]
name = "todo-task-backend"
version = "0.2.1"
description = ""
authors = [
    "st-a-novoseltcev <st.a.novoseltcev@gmail.com>"
]

[tool.poetry.dependencies]
python = "^3.10.1"
marshmallow = "^3.14.1"
SQLAlchemy = "^1.4.28"
Werkzeug = "^2.0.2"

[tool.poetry.dev-dependencies]
coverage = "^6.2"
mock = "^4.0.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
