[tool.poetry]
name = "app"
version = "0.2.0"
description = "TODO Task Manager's API as Pet-Project"
authors = ["Novoseltcev Stanislav <novoseltcev.stanislav@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
Flask-JWT-Extended = "^4.4.0"

SQLAlchemy = "^1.4.36"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"

alembic = "^1.8.0"
Flask-Migrate = "^3.1.0"

marshmallow = "^3.16.0"
marshmallow-enum = "^1.5.1"

stringcase = "^1.2.0"
python-dotenv = "^0.21.0"

gunicorn = "^20.1.0"
boto3 = "^1.24.68"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
tox = "^3.26.0"

[tool.poetry.scripts]
init_db = 'app.scripts.init_db:main'
recreate_db = 'app.scripts.recreate_db:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
